--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,7 +1,7 @@
-@charset"UTF-8";
-@font_face {
+﻿@charset "UTF-8";
+@font-face {
 	font-family:'FonteLogo';
-	src: url("../fonts/bubblegum-sans-regular.otf");
+	src: url("../fonts/bubblegum-sans-regular.oft");
 }
 body {
 	font-family: Arial, sans-serif;
@@ -16,13 +16,14 @@ p {
 }
 
 	/* formataçao de imagem com legendas*/
-	figure.foto-legenda {
+	
+	figure.foto-legenda  {
 		position:relative;
-		border: 8px solid white ;
+		border: 8px solid white;
 		box-shadow: 1px 1px 4px black;
 		
 	}
-	figure.foto-legenda img {
+	figure.foto-legenda img  {
 		width: 50%;
 		height: 50%;
 	
@@ -49,7 +50,28 @@ figure.foto-legenda:hover  figcaption {
 
 /* Formatação do Menu */
 
+nav#menu{
+	list-style: none;
+	text-transform: uppercase;
+	position: absolute;
+	top: -20px;
+	left: 300px;
+}
+
+
 nav#menu ul {
 	list-style: none;
 	text-transform: uppercase;
 	}
+	
+nav#menu li {
+	display: inline-block;
+	background-color: #dddddd;
+	padding: 10px;
+	margin: 2px;	
+}
+
+nav#menu  h1 {
+	display: none;
+	
+}
