--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -5,16 +5,50 @@
 }
 body {
 	font-family: Arial, sans-serif;
-	
-	background-color: hsl(165, 81% ,93%);
+	background-color: #dddddd;
 	color: rgba(0,0,0,1);
 }
+
+div#interface {
+	width: 900px;
+	background-color: #ffffff;
+	margin: -20px auto 0px auto;
+	box-shadow: 0px 0px 10px rgba(0,0,0,.5);
+	padding: 10px;
+	
+}
+
 p { 
 	text-align: justify;
 	text-indent: 50px;
 		
 }
+header#cabecalho img#icone {
+	position: absolute;
+	left: 780px;
+	top: 70px;
+}
 
+header#cabecalho {
+	border-bottom: 1px #606060 solid;
+	height: 150px;
+	background: url("../_imagens/glass-logo-peq.jpg") no-repeat 0px 80px;
+}
+header#cabecalho h1 {`
+	font-family: Arial, sans-serif;
+	font-size: 30pt;
+	color: #606060;
+	text-shadow: 1px 1px 1px rgba(0,0,0,.6);
+	padding: 0px;
+	margin-bottom: 0px;
+}
+header#cabecalho h2 {
+	font-family: Arial, sans-serif;
+	color: #888888;
+	font-size: 15pt;
+	padding: 0px;
+	margin-top: 0px;
+}
 	/* formataçao de imagem com legendas*/
 	
 	figure.foto-legenda  {
@@ -39,8 +73,7 @@ p {
 		height:100%;
 		padding: 10px;
 		box-sizing: border-box;
-		transition: opacity 1s;
-	
+		transition: opacity 1s;	
 }
 
 figure.foto-legenda:hover  figcaption {
@@ -58,7 +91,6 @@ nav#menu{
 	left: 300px;
 }
 
-
 nav#menu ul {
 	list-style: none;
 	text-transform: uppercase;
@@ -68,10 +100,25 @@ nav#menu li {
 	display: inline-block;
 	background-color: #dddddd;
 	padding: 10px;
-	margin: 2px;	
+	margin: 2px;
+	transition: background-color 1s;
+	
+}
+nav#menu li:hover {
+	background-color: #606060;
+	
 }
 
 nav#menu  h1 {
-	display: none;
-	
+	display: none;	
+}
+
+nav#menu a {
+	color: #000000;
+	text-decoration: none;	
+}
+
+nav#menu a:hover {
+	color: #ffffff;
+	text-decoration: underline;
 }
