--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,10 +1,11 @@
-﻿@charset "UTF-8";
-@font-face {
+﻿@font-face @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Slabo+27px&family=Titillium+Web&display=swap" rel="stylesheet");
+{
 	font-family:'FonteLogo';
-	src: url("../fonts/bubblegum-sans-regular.oft");
+	src:url("../_fonts/bubblegum-sans-regular.otf");		
 }
+
 body {
-	font-family: Arial, sans-serif;
 	background-color: #dddddd;
 	color: rgba(0,0,0,1);
 }
@@ -34,16 +35,17 @@ header#cabecalho {
 	height: 150px;
 	background: url("../_imagens/glass-logo-peq.jpg") no-repeat 0px 80px;
 }
-header#cabecalho h1 {`
-	font-family: Arial, sans-serif;
+header#cabecalho h1 {
+	font-family: 'FonteLogo', sans-serif;
 	font-size: 30pt;
 	color: #606060;
-	text-shadow: 1px 1px 1px rgba(0,0,0,.6);
+	text-shadow: 1px 1px 1px rgba (0,0,0,.6);
 	padding: 0px;
 	margin-bottom: 0px;
 }
 header#cabecalho h2 {
-	font-family: Arial, sans-serif;
+	font-family: 'Slabo 27px', serif;
+	font-family: 'Titillium Web', sans-serif;
 	color: #888888;
 	font-size: 15pt;
 	padding: 0px;
@@ -64,13 +66,13 @@ header#cabecalho h2 {
 }
 
 	figure.foto-legenda figcaption {
-		opacity:0;
-		position:absolute;
-		top:0px;
-		background-color:rgba(0,0,0,.4);
-		color:white;
+		opacity: 0;
+		position: absolute;
+		top: 0px;
+		background-color: rgba(0,0,0,.4);
+		color: white;
 		width : 100%;
-		height:100%;
+		height: 100%;
 		padding: 10px;
 		box-sizing: border-box;
 		transition: opacity 1s;	
@@ -122,3 +124,62 @@ nav#menu a:hover {
 	color: #ffffff;
 	text-decoration: underline;
 }
+
+section#corpo {
+	display: block;
+	width: 520px;
+	float: left;
+	border-right: 1px solid #606060;
+	padding-right: 15px;
+}
+table#tabelaspec {
+	border: 1px solid #606060;
+	border-spacing: 0px;
+	margin-left: auto;
+	margin-right: auto;
+}
+table#tabelaspec   td {
+	border: 1px solid #606060;
+	padding: 10px;
+	text-align: center;
+	vertical-align: middle;
+}
+table#tabelaspec td.ce {
+	color: #ffffff;
+	background-color: #606060;
+	vertical-align: top;
+	font-weight: bold;
+}
+
+table#tabelaspec td.cd {
+	background-color: #cecece;	
+}
+table#tabelaspec caption {
+	color: #888888;
+	font-size: 13pt;
+	font-weight: bolder;	
+}
+
+table#tabelaspec caption span {
+	display: block;
+	float: right;
+	color: #000000;
+	font-size: 9pt;
+	margin-top: 10px;
+}
+
+aside#lateral {
+	display: block;
+	width: 350px;
+	float: right;
+}
+
+footer#rodape {
+	clear: both;
+	border-top: 1px solid #606060;	
+}
+footer#rodape p {
+	text-align: center;
+	
+}
+
