--- a/css/fotos.css
+++ b/css/fotos.css
@@ -36,7 +36,7 @@ ul#album-fotos li:hover span {
 }
 
 ul#album-fotos  li#foto01 {
-	background: url('../_imagens/galeria-01.jpg') no-repeat;	
+	background: url('../imagens/galeria-01.jpg') no-repeat;	
 	background-position: 50% 50%;
 	background-size: 400px 400px;
 	background-color: #ffffff;
@@ -47,7 +47,7 @@ ul#album-fotos li#foto01:hover {
 }
 
 ul#album-fotos  li#foto02 {
-	background: url('../_imagens/galeria-02.jpg') no-repeat;	
+	background: url('../imagens/galeria-02.jpg') no-repeat;	
 	background-position: 50% 50%;
 	background-size: 400px 400px;
 	background-color: #ffffff;
@@ -58,7 +58,7 @@ ul#album-fotos li#foto02:hover {
 }
 
 ul#album-fotos  li#foto03 {
-	background: url('../_imagens/galeria-03.jpg') no-repeat;
+	background: url('../imagens/galeria-03.jpg') no-repeat;
 	background-position: 50% 50%;
 	background-size: 400px 400px;
 	background-color: #ffffff;
@@ -69,7 +69,7 @@ ul#album-fotos li#foto03:hover {
 }
 
 ul#album-fotos  li#foto04 {
-	background: url('../_imagens/galeria-04.jpg') no-repeat;
+	background: url('../imagens/galeria-04.jpg') no-repeat;
 	background-position: 50% 50%;
 	background-size: 400px 400px;
 	background-color: #ffffff;
@@ -80,7 +80,7 @@ ul#album-fotos li#foto04:hover {
 }
 
 ul#album-fotos  li#foto05 {
-	background: url('../_imagens/galeria-05.jpg') no-repeat;	
+	background: url('../imagens/galeria-05.jpg') no-repeat;	
 	background-position: 50% 50%;
 	background-size: 400px 400px;
 	background-color: #ffffff;
@@ -91,7 +91,7 @@ ul#album-fotos li#foto05:hover {
 }
 
 ul#album-fotos  li#foto06 {
-	background: url('../_imagens/galeria-06.jpg') no-repeat;	
+	background: url('../imagens/galeria-06.jpg') no-repeat;	
 	background-position: 50% 50%;
 	background-size: 400px 400px;
 	background-color: #ffffff;
